<resources>
    <string name="app_name">NewApp2024</string>
    <string name="main_str">Добро пожаловать в приложение для абитуриентов</string>
    <string name="choiceVuz">Выберите ВУЗ</string>
    <string name="volguBtn">ВОЛГУ</string>
    <string name="volgmuBtn">ВОЛГМУ</string>
    <string name="volgauBtn">ВОЛГАУ</string>
    <string name="volgtuBtn">ВОЛГТУ</string>
    <string name="vgspuBtn">ВГСПУ</string>
    <string name="vgafkBtn">ВГАФК</string>
    <string name="volguTittle">Волгоградский государственный университет</string>
    <string name="adressVolgu"><b>Фактический адрес</b>:400062, Волгоградская область, г. Волгоград, просп. Университетский, д. 100</string>
    <string name="uchRasp"><b>Учебные занятия:</b> Пн-Сб: 8:30-22:00 Вск: выходной</string>
    <string name="admRasp"><b>Время работы администрации университета:</b> Пн-Пт: 8:15-17:00 Сб, Вск: выходной&#xA;</string>
    <string name="priemRectVolg"><b>Приемная ректора:</b>
<b>Контактный телефон:</b> +7 (8442) 460-279
<b>Адрес электронной почты:</b> rector@volsu.ru&#xA;</string>
    <string name="mainOtdVolg"><b>Общий отдел:</b>
<b>Контактный телефон:</b>b>+7 (8442) 460-263
<b>Адрес электронной почты: ob.otdel@volsu.ru</b></string>
    <string name="mainVolgu"><a href="https://volsu.ru">Волгоградский государственный университет</a></string>
    <string name="volgObjTitle">Инструкция по получению места в общежитии</string>
    <string name="volguObjDescr">Вселение абитуриентов на время вступительных испытаний / подачи документов производится <b>ежедневно с 20 июня текущего года по 25 августа текущего года</b> по следующему графику:
<b>пн-пт: с 9:00 до 16:00</b>,
<b>сб: с 9:30 до 14:00<br /><br /><br /></b>.</string>
    <string name="volguObjDescr2">Абитуриенты размещаются в комнаты улучшенных условий проживания. Оплата проживания за одно койко-место составляет:<br />

 3-местные комнаты (с холодильником) – 1080 рублей в сутки;<br />
 2-местные комнаты (с холодильником) – 1080 рублей в сутки;<br />
 2-местные комнаты (с холодильником и телевизором) – 1260 рублей в сутки;<br />
 1-местные комнаты (с холодильником) – 1 260 рублей в сутки;<br />
 1-местные комнаты (с холодильником и телевизором) – 1 380 рублей в сутки.<br /></string>

    <string name="aboutImitVolgu">ИМИТ - единственный в регионе институт, выпускающий математиков с классическим университетским образованием, вырастивший за последние несколько лет более 10 докторов и более 25 кандидатов наук, в аспирантуре института по шести специальностям обучается более 10 аспирантов.</string>
</resources>